Add a hover and focus effects

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="dark light" />
-		<link rel="stylesheet" href="./images/favicon.ico" />
-		<link rel="stylesheet" href="./styles/globals.css" />
 		<link rel="stylesheet" href="./fonts/fonts.css" />
+		<link rel="stylesheet" href="./styles/globals.css" />
 		<link rel="stylesheet" href="./styles/variables.css" />
 		<link rel="stylesheet" href="./styles/style.css" />
 		<link rel="stylesheet" href="./styles/dark.css" />
 		<link rel="stylesheet" href="./styles/light.css" />
+		<link rel="icon" href="./images/favicon.ico" />
+		<link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
 		<title>Сложно сосредоточиться</title>
 	</head>
 	<body class="page">
@@ -66,11 +67,15 @@
 								важные. Где же легендарная многозадачность, когда она так нужна
 								вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
 								её просто не существует. Исследователи
-								<a class="shadow-link" href="">выяснили</a>, что мозгу тяжело
-								концентрироваться даже на двух делах одновременно. А когда в
-								поле внимания попадает несколько важных задач, организм паникует
-								и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
-								мы работаем невнимательно: ошибаемся и быстро устаём.
+								<a
+									class="shadow-link"
+									href="https://www.dana.org/article/multicosts-of-multitasking/"
+									>выяснили</a
+								>, что мозгу тяжело концентрироваться даже на двух делах
+								одновременно. А когда в поле внимания попадает несколько важных
+								задач, организм паникует и выделяет кортизол и адреналин —
+								«гормоны стресса». Из-за этого мы работаем невнимательно:
+								ошибаемся и быстро устаём.
 							</p>
 						</article>
 					</li>
@@ -198,12 +203,16 @@
 							</h4>
 							<p class="article__text">
 								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-								показал, что созерцание природы повышает концентрацию, в то
-								время как после просмотра городских пейзажей она наоборот
-								понижается. Можно совместить прогулку с физическими упражнениями
-								или бегом — так в мозг поступит ещё больше кислорода и он будет
-								лучше работать. Но и простая двадцатиминутная прогулка — тоже
-								отличный вариант.
+								<a
+									class="shadow-link"
+									href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+									>показал</a
+								>, что созерцание природы повышает концентрацию, в то время как
+								после просмотра городских пейзажей она наоборот понижается.
+								Можно совместить прогулку с физическими упражнениями или бегом —
+								так в мозг поступит ещё больше кислорода и он будет лучше
+								работать. Но и простая двадцатиминутная прогулка — тоже отличный
+								вариант.
 							</p>
 						</article>
 					</li>
