First send to review

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
 								её просто не существует. Исследователи
 								<a
-									class="shadow-link"
+									class="link"
 									href="https://www.dana.org/article/multicosts-of-multitasking/"
 									>выяснили</a
 								>, что мозгу тяжело концентрироваться даже на двух делах
@@ -204,7 +204,7 @@
 							<p class="article__text">
 								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
 								<a
-									class="shadow-link"
+									class="link"
 									href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
 									>показал</a
 								>, что созерцание природы повышает концентрацию, в то время как
