Send to review after adding alt atribute

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 						<img
 							class="pictures-list__img"
 							src="./images/books.png"
-							alt="Кассета"
+							alt="Книжки"
 							loading="lazy"
 						/>
 					</li>
