Second send to review

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 								её просто не существует. Исследователи
 								<a
 									class="link"
+									target="_blank"
 									href="https://www.dana.org/article/multicosts-of-multitasking/"
 									>выяснили</a
 								>, что мозгу тяжело концентрироваться даже на двух делах
@@ -152,7 +153,6 @@
 					</li>
 				</ul>
 			</section>
-
 			<section class="section advices">
 				<h2 class="section__title">
 					Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
@@ -168,7 +168,7 @@
 					</li>
 					<li class="advices-list__item">
 						<article class="article">
-							<h4 class="article__title title-decor">
+							<h4 class="article__title title-decor regular-title">
 								Представьте небо и облака
 							</h4>
 							<p class="article__text">
@@ -205,6 +205,7 @@
 								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
 								<a
 									class="link"
+									target="_blank"
 									href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
 									>показал</a
 								>, что созерцание природы повышает концентрацию, в то время как
@@ -245,7 +246,6 @@
 					</li>
 				</ul>
 			</section>
-
 			<section class="section pictures">
 				<h2 class="article__text title-decor">А можно в картинках?</h2>
 				<ul class="pictures-list">
@@ -277,7 +277,7 @@
 						<img
 							class="pictures-list__img"
 							src="./images/books.png"
-							alt="Книжки"
+							alt="Стопка книг"
 							loading="lazy"
 						/>
 					</li>
@@ -292,7 +292,6 @@
 				</ul>
 			</section>
 		</main>
-
 		<footer class="footer decorated-zone">
 			<h2 class="footer__title common__title">focus</h2>
 		</footer>
