Testing after second review

--- a/index.html
+++ b/index.html
@@ -153,142 +153,135 @@
 					</li>
 				</ul>
 			</section>
+
 			<section class="section advices">
 				<h2 class="section__title">
 					Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
 					секунд)
 				</h2>
-				<ul class="advices-list list">
-					<li class="advices-list__item">
-						<article class="article">
-							<h3 class="article__title title-decor title-accent">
-								5 простых (на самом деле не очень) советов
-							</h3>
-						</article>
-					</li>
-					<li class="advices-list__item">
-						<article class="article">
-							<h4 class="article__title title-decor regular-title">
-								Представьте небо и облака
-							</h4>
-							<p class="article__text">
-								Или листья в ручье. Тут дело в лёгкой медитации, которая
-								помогает успокоиться. Ведь часто именно тревожные мысли о
-								сложных задачах как раз и мешают эти сложные задачи делать. В
-								такие моменты можно закрыть глаза и представить, что чистое небо
-								— это вы, а облака — тревожные мысли. И сколько бы их ни было —
-								ясное небо всегда будет где-то там, за тучами, и никуда не
-								денется. Это упражнение поможет вернуться в настоящий момент, а
-								не волноваться о потенциальных проблемах из будущего.
-							</p>
-						</article>
-					</li>
-					<li class="advices-list__item">
-						<article class="article">
-							<h4 class="article__title title-decor">
-								Включите музыку
-							</h4>
-							<p class="article__text">
-								Но не любую, и не любимую. Любимая может быть связана с сильными
-								положительными эмоциями, которые тоже очень сильно отвлекают.
-								Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-								попробовать включить плейлист в «белым шумом» или нейромузыкой.
-							</p>
-						</article>
-					</li>
-					<li class="advices-list__item">
-						<article class="article">
-							<h4 class="article__title title-decor">
-								Прогуляйтесь
-							</h4>
-							<p class="article__text">
-								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-								<a
-									class="link"
-									target="_blank"
-									href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-									>показал</a
-								>, что созерцание природы повышает концентрацию, в то время как
-								после просмотра городских пейзажей она наоборот понижается.
-								Можно совместить прогулку с физическими упражнениями или бегом —
-								так в мозг поступит ещё больше кислорода и он будет лучше
-								работать. Но и простая двадцатиминутная прогулка — тоже отличный
-								вариант.
-							</p>
-						</article>
-					</li>
-					<li class="advices-list__item">
-						<article class="article">
-							<h4 class="article__title title-decor">
-								Хорошо ешьте
-							</h4>
-							<p class="article__text">
-								Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-								которые препятствуют резким скачкам сахара в крови. Например, с
-								высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-								чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
-								пшеницы.
-							</p>
-						</article>
-					</li>
-					<li class="advices-list__item">
-						<article class="article">
-							<h4 class="article__title title-decor">
-								Читайте
-							</h4>
-							<p class="article__text">
-								Настоящие бумажные книги. Это правда помогает с концентрацией:
-								чтобы прочитать пост в соцсети, достаточно нескольких минут или
-								даже секунд. А вот интересная книга способна затянуть и на
-								несколько часов и круто тренирует направленное внимание.
-							</p>
-						</article>
-					</li>
-				</ul>
+				<article class="advices__article">
+					<h3 class="article__title title-decor title-accent">
+						5 простых (на самом деле не очень) советов
+					</h3>
+					<ul class="advices-list list">
+						<li class="advices-list__item">
+							<article class="article">
+								<h4 class="article__title title-decor regular-title">
+									Представьте небо и облака
+								</h4>
+								<p class="article__text">
+									Или листья в ручье. Тут дело в лёгкой медитации, которая
+									помогает успокоиться. Ведь часто именно тревожные мысли о
+									сложных задачах как раз и мешают эти сложные задачи делать. В
+									такие моменты можно закрыть глаза и представить, что чистое
+									небо — это вы, а облака — тревожные мысли. И сколько бы их ни
+									было — ясное небо всегда будет где-то там, за тучами, и никуда
+									не денется. Это упражнение поможет вернуться в настоящий
+									момент, а не волноваться о потенциальных проблемах из
+									будущего.
+								</p>
+							</article>
+						</li>
+						<li class="advices-list__item">
+							<article class="article">
+								<h4 class="article__title title-decor regular-title">
+									Включите музыку
+								</h4>
+								<p class="article__text">
+									Но не любую, и не любимую. Любимая может быть связана с
+									сильными положительными эмоциями, которые тоже очень сильно
+									отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
+									Можно вообще попробовать включить плейлист в «белым шумом» или
+									нейромузыкой.
+								</p>
+							</article>
+						</li>
+						<li class="advices-list__item">
+							<article class="article">
+								<h4 class="article__title title-decor regular-title">
+									Прогуляйтесь
+								</h4>
+								<p class="article__text">
+									Или даже пробегитесь. Лучше найти парк или лес: один
+									эксперимент
+									<a
+										class="link"
+										target="_blank"
+										href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+										>показал</a
+									>, что созерцание природы повышает концентрацию, в то время
+									как после просмотра городских пейзажей она наоборот
+									понижается. Можно совместить прогулку с физическими
+									упражнениями или бегом — так в мозг поступит ещё больше
+									кислорода и он будет лучше работать. Но и простая
+									двадцатиминутная прогулка — тоже отличный вариант.
+								</p>
+							</article>
+						</li>
+						<li class="advices-list__item">
+							<article class="article">
+								<h4 class="article__title title-decor regular-title">
+									Хорошо ешьте
+								</h4>
+								<p class="article__text">
+									Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+									которые препятствуют резким скачкам сахара в крови. Например,
+									с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+									чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+									пшеницы.
+								</p>
+							</article>
+						</li>
+						<li class="advices-list__item">
+							<article class="article">
+								<h4 class="article__title title-decor regular-title">
+									Читайте
+								</h4>
+								<p class="article__text">
+									Настоящие бумажные книги. Это правда помогает с концентрацией:
+									чтобы прочитать пост в соцсети, достаточно нескольких минут
+									или даже секунд. А вот интересная книга способна затянуть и на
+									несколько часов и круто тренирует направленное внимание.
+								</p>
+							</article>
+						</li>
+					</ul>
+				</article>
 			</section>
+
 			<section class="section pictures">
 				<h2 class="article__text title-decor">А можно в картинках?</h2>
 				<ul class="pictures-list">
-					<li class="pictures-list__item sunset__picture">
-						<img
-							class="pictures-list__img"
-							src="./images/sunset.png"
-							alt="Морской пейзаж"
-							loading="lazy"
-						/>
-					</li>
-					<li class="pictures-list__item ice-cream__picture">
-						<img
-							class="pictures-list__img"
-							src="./images/ice-cream.png"
-							alt="Мультяшное мороженое"
-							loading="lazy"
-						/>
-					</li>
-					<li class="pictures-list__item tape__picture">
-						<img
-							class="pictures-list__img"
-							src="./images/tape.png"
-							alt="Кассета"
-							loading="lazy"
-						/>
-					</li>
-					<li class="pictures-list__item books__picture">
-						<img
-							class="pictures-list__img"
-							src="./images/books.png"
-							alt="Стопка книг"
-							loading="lazy"
-						/>
-					</li>
-					<li class="pictures-list__item street__picture">
-						<img
-							class="pictures-list__img"
-							src="./images/street.png"
-							alt="Узкая улочка"
-							loading="lazy"
-						/>
-					</li>
+					<img
+						class="pictures-list__img sunset__picture"
+						src="./images/sunset.png"
+						alt="Морской пейзаж"
+						loading="lazy"
+					/>
+					<img
+						class="pictures-list__img ice-cream__picture"
+						src="./images/ice-cream.png"
+						alt="Мультяшное мороженое"
+						loading="lazy"
+					/>
+					<img
+						class="pictures-list__img tape__picture"
+						src="./images/tape.png"
+						alt="Кассета"
+						loading="lazy"
+					/>
+					<img
+						class="pictures-list__img books__picture"
+						src="./images/books.png"
+						alt="Стопка книг"
+						loading="lazy"
+					/>
+					<img
+						class="pictures-list__img street__picture"
+						src="./images/street.png"
+						alt="Узкая улочка"
+						loading="lazy"
+					/>
 				</ul>
 			</section>
 		</main>
