Testing #2 adding pictures--grid

--- a/index.html
+++ b/index.html
@@ -251,38 +251,38 @@
 
 			<section class="section pictures">
 				<h2 class="article__text title-decor">А можно в картинках?</h2>
-				<ul class="pictures-list">
+				<div class="pictures--grid">
 					<img
-						class="pictures-list__img sunset__picture"
+						class="pictures__item sunset__picture"
 						src="./images/sunset.png"
 						alt="Морской пейзаж"
 						loading="lazy"
 					/>
 					<img
-						class="pictures-list__img ice-cream__picture"
+						class="pictures__item ice-cream__picture"
 						src="./images/ice-cream.png"
 						alt="Мультяшное мороженое"
 						loading="lazy"
 					/>
 					<img
-						class="pictures-list__img tape__picture"
+						class="pictures__item tape__picture"
 						src="./images/tape.png"
 						alt="Кассета"
 						loading="lazy"
 					/>
 					<img
-						class="pictures-list__img books__picture"
+						class="pictures__item books__picture"
 						src="./images/books.png"
 						alt="Стопка книг"
 						loading="lazy"
 					/>
 					<img
-						class="pictures-list__img street__picture"
+						class="pictures__item street__picture"
 						src="./images/street.png"
 						alt="Узкая улочка"
 						loading="lazy"
 					/>
-				</ul>
+				</div>
 			</section>
 		</main>
 		<footer class="footer decorated-zone">
