Sending to review, last, i hope..(Fixing images sizes, weight of five hedings, pictures grid gap, 375px font-size, 1024-375px display, recording prefers display and other

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 				сложно сконцентрироваться, особенно когда очень надо
 			</p>
 		</header>
-
 		<main class="main">
 			<section class="section reasons">
 				<h2 class="section__title">
@@ -100,7 +99,6 @@
 					</li>
 				</ul>
 			</section>
-
 			<section class="section concentration">
 				<h2 class="section__title">Что снижает концентрацию внимания?</h2>
 				<ul class="concentration-list list">
@@ -153,7 +151,6 @@
 					</li>
 				</ul>
 			</section>
-
 			<section class="section advices">
 				<h2 class="section__title">
 					Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
@@ -248,36 +245,35 @@
 					</ul>
 				</article>
 			</section>
-
 			<section class="section pictures">
 				<h2 class="article__text title-decor">А можно в картинках?</h2>
-				<div class="pictures--grid">
+				<div class="pictures-collage">
 					<img
-						class="pictures__item sunset__picture"
+						class="pictures-collage__item sunset__picture"
 						src="./images/sunset.png"
 						alt="Морской пейзаж"
 						loading="lazy"
 					/>
 					<img
-						class="pictures__item ice-cream__picture"
+						class="pictures-collage__item ice-cream__picture"
 						src="./images/ice-cream.png"
 						alt="Мультяшное мороженое"
 						loading="lazy"
 					/>
 					<img
-						class="pictures__item tape__picture"
+						class="pictures-collage__item tape__picture"
 						src="./images/tape.png"
 						alt="Кассета"
 						loading="lazy"
 					/>
 					<img
-						class="pictures__item books__picture"
+						class="pictures-collage__item books__picture"
 						src="./images/books.png"
 						alt="Стопка книг"
 						loading="lazy"
 					/>
 					<img
-						class="pictures__item street__picture"
+						class="pictures-collage__item street__picture"
 						src="./images/street.png"
 						alt="Узкая улочка"
 						loading="lazy"
