--- a/index.html
+++ b/index.html
@@ -80,22 +80,19 @@
 						</article>
 					</li>
 					<li class="reasons-list__item">
-						<article class="article">
-							<h3 class="article__title title-decor">
-								Дофамин
-							</h3>
-							<p class="article__text">
-								С гормонами стресса всё понятно, но дальше — ещё интереснее. В
-								нашей невозможности сосредоточиться замешана и полная
-								противоположность стрессу — дофамин. Это вещество участвует в
-								системе вознаграждения мозга. Причём тут он? Мы часто
-								отвлекаемся от важной задачи на что-то более «приятное» для
-								мозгов. Например, смотрим лайки в соцсетях. В это время и
-								выделяется дофамин — и мы чувствуем удовольствие. Получается
-								замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
-								получаешь.
-							</p>
-						</article>
+						<h3 class="article__title title-decor">
+							Дофамин
+						</h3>
+						<p class="article__text">
+							С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+							нашей невозможности сосредоточиться замешана и полная
+							противоположность стрессу — дофамин. Это вещество участвует в
+							системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+							от важной задачи на что-то более «приятное» для мозгов. Например,
+							смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+							чувствуем удовольствие. Получается замкнутый круг: чем больше
+							отвлекаешься, тем больше удовольствия получаешь.
+						</p>
 					</li>
 				</ul>
 			</section>
@@ -103,51 +100,44 @@
 				<h2 class="section__title">Что снижает концентрацию внимания?</h2>
 				<ul class="concentration-list list">
 					<li class="concentration-list__item">
-						<article class="article">
-							<h3 class="article__title title-decor">
-								Многозадачность
-							</h3>
-							<p class="article__text">
-								Как концентрация может снижаться из-за… концентрации? Любая
-								стрессовая ситуация (и резко меняющийся мир в целом) заставляет
-								наш мозг постоянно «сканировать» окружающую среду на предмет
-								опасности. Например, читать новости вместо работы. Но быть
-								собранными всё время — невозможно. Концентрация — мышца, и она
-								может не выдержать, если не давать ей отдохнуть.
-							</p>
-						</article>
+						<h3 class="article__title title-decor">
+							Многозадачность
+						</h3>
+						<p class="article__text">
+							Как концентрация может снижаться из-за… концентрации? Любая
+							стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+							наш мозг постоянно «сканировать» окружающую среду на предмет
+							опасности. Например, читать новости вместо работы. Но быть
+							собранными всё время — невозможно. Концентрация — мышца, и она
+							может не выдержать, если не давать ей отдохнуть.
+						</p>
 					</li>
 					<li class="concentration-list__item">
-						<article class="article">
-							<h3 class="article__title title-decor">
-								Еда
-							</h3>
-							<p class="article__text">
-								«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-								доставляют в мозг энергию и помогают ему лучше работать. Но
-								уходит эта энергия также быстро, как и приходит. А мы в
-								результате попадаем на «углеводные качели»: как только действие
-								«быстрых углеводов» заканчивается, мы чувствуем усталость и
-								сонливость. И хотим ещё больше быстрых углеводов.
-							</p>
-						</article>
+						<h3 class="article__title title-decor">
+							Еда
+						</h3>
+						<p class="article__text">
+							«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+							доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+							эта энергия также быстро, как и приходит. А мы в результате
+							попадаем на «углеводные качели»: как только действие «быстрых
+							углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+							хотим ещё больше быстрых углеводов.
+						</p>
 					</li>
 					<li class="concentration-list__item">
-						<article class="article">
-							<h3 class="article__title title-decor">
-								Гаджеты
-							</h3>
-							<p class="article__text">
-								Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-								наушниках — подкаст, а на компьютере фоном — ещё и видео с
-								забавными утятами. В результате мозг пытается переключиться с
-								одной задачи на другую — и просто не может. А чтобы вернуться к
-								состоянию полной концентрации, человеку в среднем нужно 20
-								минут. Вот и получается, что чем больше времени мы проводим в
-								гаджетах, тем больше времени затем нужно, чтобы вернуться к
-								работе.
-							</p>
-						</article>
+						<h3 class="article__title title-decor">
+							Гаджеты
+						</h3>
+						<p class="article__text">
+							Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+							наушниках — подкаст, а на компьютере фоном — ещё и видео с
+							забавными утятами. В результате мозг пытается переключиться с
+							одной задачи на другую — и просто не может. А чтобы вернуться к
+							состоянию полной концентрации, человеку в среднем нужно 20 минут.
+							Вот и получается, что чем больше времени мы проводим в гаджетах,
+							тем больше времени затем нужно, чтобы вернуться к работе.
+						</p>
 					</li>
 				</ul>
 			</section>
@@ -162,85 +152,72 @@
 					</h3>
 					<ul class="advices-list list">
 						<li class="advices-list__item">
-							<article class="article">
-								<h4 class="article__title title-decor regular-title">
-									Представьте небо и облака
-								</h4>
-								<p class="article__text">
-									Или листья в ручье. Тут дело в лёгкой медитации, которая
-									помогает успокоиться. Ведь часто именно тревожные мысли о
-									сложных задачах как раз и мешают эти сложные задачи делать. В
-									такие моменты можно закрыть глаза и представить, что чистое
-									небо — это вы, а облака — тревожные мысли. И сколько бы их ни
-									было — ясное небо всегда будет где-то там, за тучами, и никуда
-									не денется. Это упражнение поможет вернуться в настоящий
-									момент, а не волноваться о потенциальных проблемах из
-									будущего.
-								</p>
-							</article>
+							<h4 class="article__title title-decor regular-title">
+								Представьте небо и облака
+							</h4>
+							<p class="article__text">
+								Или листья в ручье. Тут дело в лёгкой медитации, которая
+								помогает успокоиться. Ведь часто именно тревожные мысли о
+								сложных задачах как раз и мешают эти сложные задачи делать. В
+								такие моменты можно закрыть глаза и представить, что чистое небо
+								— это вы, а облака — тревожные мысли. И сколько бы их ни было —
+								ясное небо всегда будет где-то там, за тучами, и никуда не
+								денется. Это упражнение поможет вернуться в настоящий момент, а
+								не волноваться о потенциальных проблемах из будущего.
+							</p>
 						</li>
 						<li class="advices-list__item">
-							<article class="article">
-								<h4 class="article__title title-decor regular-title">
-									Включите музыку
-								</h4>
-								<p class="article__text">
-									Но не любую, и не любимую. Любимая может быть связана с
-									сильными положительными эмоциями, которые тоже очень сильно
-									отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
-									Можно вообще попробовать включить плейлист в «белым шумом» или
-									нейромузыкой.
-								</p>
-							</article>
+							<h4 class="article__title title-decor regular-title">
+								Включите музыку
+							</h4>
+							<p class="article__text">
+								Но не любую, и не любимую. Любимая может быть связана с сильными
+								положительными эмоциями, которые тоже очень сильно отвлекают.
+								Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+								попробовать включить плейлист в «белым шумом» или нейромузыкой.
+							</p>
 						</li>
 						<li class="advices-list__item">
-							<article class="article">
-								<h4 class="article__title title-decor regular-title">
-									Прогуляйтесь
-								</h4>
-								<p class="article__text">
-									Или даже пробегитесь. Лучше найти парк или лес: один
-									эксперимент
-									<a
-										class="link"
-										target="_blank"
-										href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-										>показал</a
-									>, что созерцание природы повышает концентрацию, в то время
-									как после просмотра городских пейзажей она наоборот
-									понижается. Можно совместить прогулку с физическими
-									упражнениями или бегом — так в мозг поступит ещё больше
-									кислорода и он будет лучше работать. Но и простая
-									двадцатиминутная прогулка — тоже отличный вариант.
-								</p>
-							</article>
+							<h4 class="article__title title-decor regular-title">
+								Прогуляйтесь
+							</h4>
+							<p class="article__text">
+								Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+								<a
+									class="link"
+									target="_blank"
+									href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+									>показал</a
+								>, что созерцание природы повышает концентрацию, в то время как
+								после просмотра городских пейзажей она наоборот понижается.
+								Можно совместить прогулку с физическими упражнениями или бегом —
+								так в мозг поступит ещё больше кислорода и он будет лучше
+								работать. Но и простая двадцатиминутная прогулка — тоже отличный
+								вариант.
+							</p>
 						</li>
 						<li class="advices-list__item">
-							<article class="article">
-								<h4 class="article__title title-decor regular-title">
-									Хорошо ешьте
-								</h4>
-								<p class="article__text">
-									Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-									которые препятствуют резким скачкам сахара в крови. Например,
-									с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-									чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
-									пшеницы.
-								</p>
-							</article>
+							<h4 class="article__title title-decor regular-title">
+								Хорошо ешьте
+							</h4>
+							<p class="article__text">
+								Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+								которые препятствуют резким скачкам сахара в крови. Например, с
+								высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+								чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+								пшеницы.
+							</p>
 						</li>
 						<li class="advices-list__item">
-							<article class="article">
-								<h4 class="article__title title-decor regular-title">
-									Читайте
-								</h4>
-								<p class="article__text">
-									Настоящие бумажные книги. Это правда помогает с концентрацией:
-									чтобы прочитать пост в соцсети, достаточно нескольких минут
-									или даже секунд. А вот интересная книга способна затянуть и на
-									несколько часов и круто тренирует направленное внимание.
-								</p>
-							</article>
+							<h4 class="article__title title-decor regular-title">
+								Читайте
+							</h4>
+							<p class="article__text">
+								Настоящие бумажные книги. Это правда помогает с концентрацией:
+								чтобы прочитать пост в соцсети, достаточно нескольких минут или
+								даже секунд. А вот интересная книга способна затянуть и на
+								несколько часов и круто тренирует направленное внимание.
+							</p>
 						</li>
 					</ul>
 				</article>
